@@ -3,6 +3,10 @@
 # hashing algorithms.
 #
 
+import warnings
+warnings.filterwarnings("ignore", "the md5 module is deprecated.*",
+                        DeprecationWarning)
+
 import md5, sha, hmac
 
 def check_hash_module(module, key=None):
